2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/elements/souphttpsrc.c:
	Include glib/gprintf.h for g_vasprintf(). Fixes bug #515564.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/librfb/gstrfbsrc.c: (gst_rfb_src_dispose):
	Free the rfb decoder on finalize. Fixes bug #515721.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* sys/fbdev/gstfbdevsink.c: (gst_fbdevsink_class_init),
	(gst_fbdevsink_finalize):
	Free the device string in finalize. Fixes bug #515722.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/xvid/gstxvidenc.c: (gst_xvidenc_init):
	Unset GValues after using them. Fixes bug #515720.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/Makefile.am:
	Disable the dvb plugin for the states test. Fixes bug #515567.

2008-02-10  Edgard Lima,,,,  <edgard.lima@indt.org.br>

	* ext/metadata/TODO:
	* ext/metadata/metadata_mapping.htm:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadatatags.c:
	* ext/metadata/metadatatags.h:
	* tests/icles/metadata_editor.c:
	  Revert changes to 2008-02-09 due to frozen.

2008-02-10  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/ivorbis/vorbisfile.c:
	Trivial fix for build warning.
	Patch by: Josep Torra Valles <josep@fluendo.com>
	Fixes: #515588

2008-02-10  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/TODO:
	* ext/metadata/metadataexif.c:
	  Convert from EXIF to XMP DataTime as local time.

2008-02-10  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/TODO:
	* ext/metadata/metadata_mapping.htm:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadatatags.c:
	* ext/metadata/metadatatags.h:
	* tests/icles/metadata_editor.c:
	  Map Date-Time and GPS tags.
	  

2008-02-09  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/selector/Makefile.am:

	Listing the marshal.h in the nodist_HEADERS breaks distcheck, so
	let's not do that

	* tests/check/Makefile.am:
	Disable the crashing cdaudio plugin from the states test so I can make