@@ -1,3 +1,12 @@
+2008-02-12  Jan Schmidt  <jan.schmidt@sun.com>
+
+	* ext/xvid/gstxvidenc.c:
+	* gst/vmnc/vmncdec.c:
+	* sys/glsink/glimagesink.c:
+	* sys/glsink/gstgldisplay.c:
+
+	Fix some finalize leaks by chaining up to the parent method.
+
 2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* tests/check/elements/souphttpsrc.c:
